[package]
name = "ceph-client"
version = "0.1.0"
authors = ["Chris MacNaughton <chris@centaurisolutions.nl>"]

# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
description = "ceph-client is an opinionated Ceph library"

# These URLs point to more information about the package. These are
# intended to be webviews of the relevant data, not necessarily compatible
# with VCS tools and the like.
documentation = "https://docs.rs/ceph-client"
homepage = "https://github.com/CentauriSolutions/ceph_client"
repository = "https://github.com/CentauriSolutions/ceph_client"

# This points to a file under the package root (relative to this `Cargo.toml`).
# The contents of this file are stored and indexed in the registry.
# crates.io will render this file and place the result on the crate's page.
readme = "README.md"

# This is a list of up to five keywords that describe this crate. Keywords
# are searchable on crates.io, and you may choose any words that would
# help someone find this crate.
keywords = ["storage", "ceph"]

# This is a list of up to five categories where this crate would fit.
# Categories are a fixed list available at crates.io/category_slugs, and
# they must match exactly.
categories = ["filesystem"]

# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can be
# separated with a `/`.
license = "MIT/Apache-2.0"

[badges]

travis-ci = { repository = "CentauriSolutions/ceph_client", branch = "master" }

[dependencies]
# ceph-rust = "0.1.17"
ceph-rust = { git="https://github.com/ceph/ceph-rust" }
libc = "*"
log = "*"
serde_derive = "~1.0"
serde = "~1.0"
serde_json = "~1.0"
error-chain = "0.11"